--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "prop-types": "15.7.0",
     "react": "16.8.1",
-    "react-dom": "16.8.1"
+    "react-dom": "16.8.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
