--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "15.7.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-motion": "^0.5.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
